--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>v.0.1</title>
+    <title>v.0.2</title>
 </head>
 <body>
-    
+    <p>
+        yea!!!111!!
+    </p>
 </body>
 </html>
