--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>v.0.2</title>
+    <link href="style.css" rel="stylesheet">
+    <title>v.0.3</title>
 </head>
 <body>
     <p>
-        yea!!!111!!
+        yea!!!111!!!
     </p>
 </body>
 </html>
